demo3/deployment-green.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: green-deployment
  namespace: deployment-demos
  labels:
    app: advanced-app-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: advanced-app-green
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: advanced-app-green
        deploymentconfig: advanced-app-green
    spec:
      containers:
        - name: advanced-app-green
          image: >-
            image-registry.openshift-image-registry.svc:5000/deployment-demos/advanced-service:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
