demo3/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-app-git-v1
  namespace: demo3
  labels:
    app: simple-app-git-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-app-git-v1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-app-git-v1
        deploymentconfig: simple-app-git-v1
    spec:
      containers:
        - name: simple-app-git
          image: >-
            image-registry.openshift-image-registry.svc:5000/deployment-demos/advanced-service:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
