demo3/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: advanced-app-route
  namespace: deployment-demos
  labels:
    app: advanced-service
spec:
  to:
    kind: Service
    name: green-service
    weight: 20
  alternateBackends:
    - kind: Service
      name: blue-service
      weight: 80
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
